--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>      <!--Standard Unified Text Format-->                                                      
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />    <!--To compatible for all the devices-->      
         <title>Pruthvika Website</title>
-        <link rel="stylesheet" href="./css/style1.css"> 
+        <link rel="stylesheet" href="style1.css"> 
         <script src="jquery.js"></script>                                  
     </head>
     <body>
